remove rocky test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
     strategy:
       matrix:
         distro:
-          - rockylinux9
-          - rockylinux8
+          # - rockylinux9
+          # - rockylinux8
           - ubuntu2204
           - debian11
     steps:
