--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install test dependencies.
         run: |
           python3 -m pip install --upgrade pip
-          pip3 install ansible docker 'molecule-plugins[docker]' ansible-lint yamllint flake8
+          pip3 install ansible docker ansible-lint yamllint flake8 'molecule-plugins[docker]'
 
       - name: Run Molecule tests.
         run: molecule test
