--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -16,7 +16,7 @@
         update_cache: true
       when: ansible_os_family == 'RedHat'
 
-    - name: Wait for systemd to complete initialization. # noqa 303
+    - name: Wait for systemd to complete initialization.
       ansible.builtin.command: systemctl is-system-running
       register: systemctl_status
       until: >
