--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -7,14 +7,14 @@
 
 - name: Installing debian system packages
   ansible.builtin.package:
-    name: { { linux_packages } }
+    name: "{{ linux_packages }}"
     state: present
   become: "{{ ansible_os_family != 'Darwin' }}"
-  when: ansible_os_family == 'Debian' or ansible_os_family == 'RedHat'
+  when: ansible_os_family != 'Darwin'
 
 - name: Installing MacOS system packages without python
   community.general.homebrew:
-    name: { { macos_packages } }
+    name: "{{ macos_packages }}"
     state: latest
     update_homebrew: true
   become: "{{ ansible_os_family != 'Darwin' }}"
@@ -22,7 +22,7 @@
 
 - name: Installing MacOS system packages with python
   community.general.homebrew:
-    name: { { macos_packages_python } }
+    name: "{{ macos_packages_python }}"
     state: latest
     update_homebrew: true
   become: "{{ ansible_os_family != 'Darwin' }}"
